# zapping-challenge

./: .gitignore  .prettierrc  Dockerfile  README.md  docker-compose.yml  makefile
.devcontainer/: Dockerfile.backend.dev  devcontainer.json  docker-compose.development.yml  docker-compose.yml
.devcontainer/backend/: Dockerfile.dev  devcontainer.json  docker-compose.yml
.devcontainer/frontend/: devcontainer.json  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  app.js  constants.js  database.js  package-lock.json  package.json  users.js  video.js
backend-old/: Dockerfile  package-lock.json
backend-old/users/: users.js
backend-old/video/: playlist.js  video.js
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs
backend/src/: database.rs  lib.rs  main.rs  users.rs  video.rs
backend/src/database/: create_user.rs  get_user.rs  migrator.rs  users.rs
backend/src/database/migrator/: m20240901_000835_create_users_table.rs
backend/src/users/: models.rs  router.rs
backend/src/video/: playlist.rs  router.rs
backend/users/: database.js
backend/video/: playlist.js  video.js
frontend/: Dockerfile  eslint.config.js  index.css  index.html  index.js  package-lock.json  package.json  signup.html  signup.js  styles.css  video.html  video.js
frontend/frontend_old/: package-lock.json  package.json
frontend/frontend_old/src/: App.jsx  main.jsx
frontend/src/: App.jsx  App.svelte  Router.jsx  Router.svelte  main.js  main.jsx
frontend/src/pages/: Login.jsx  (+5 more)
old-frontend/: index.html  signup.html  signup.js  video.html  video.js
(+21 files in other folders)
