[package]
name = "zapping-hls-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
sea-orm = { version = "1.0.1", features = ["macros", "runtime-tokio-native-tls", "sqlx-postgres"] }
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
