[package]
name = "zapping-hls-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
http = "1.1.0"
sea-orm = { version = "1.0.1", features = ["macros", "runtime-tokio-native-tls", "sqlx-postgres"] }
sea-orm-migration = "1.0.1"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["cors"] }
